--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "node-os-utils": "^1.3.7",
     "form-data": "^4.0.0",
     "coderxsa-bot": "^5.2.2",
+    "axios": "^1.4.0",
+    "node-fetch": "^3.3.1",
     "jimp": "^0.16.2"
   }
 }
